@@ -2479,24 +2479,13 @@ reread_symbols (void)
 	  memcpy (offsets, objfile->section_offsets,
 		  SIZEOF_N_SECTION_OFFSETS (num_offsets));
 
-	  /* FIXME: Do we have to free a whole linked list, or is this
-	     enough?  */
-	  objfile->partial_symtabs->global_psymbols.clear ();
-	  objfile->partial_symtabs->static_psymbols.clear ();
-	  objfile->psymtab_map.reset ();
-
-	  /* Free the obstacks for non-reusable objfiles.  */
-	  psymbol_bcache_free (objfile->partial_symtabs->psymbol_cache);
-	  objfile->partial_symtabs->psymbol_cache = psymbol_bcache_init ();
+	  objfile->reset_psymtabs ();
 
 	  /* NB: after this call to obstack_free, objfiles_changed
 	     will need to be called (see discussion below).  */
 	  obstack_free (&objfile->objfile_obstack, 0);
 	  objfile->sections = NULL;
 	  objfile->compunit_symtabs = NULL;
-	  objfile->partial_symtabs->psymtabs = NULL;
-	  objfile->partial_symtabs->psymtabs_addrmap = NULL;
-	  objfile->partial_symtabs->free_psymtabs = NULL;
 	  objfile->template_symbols = NULL;
 	  objfile->static_links = NULL;
 
